# cfd

./: .gitignore  README.md
advection-diffusion/: code1.cpp
brusselator/: code1.cpp  naive.cpp
diffusion/: code1.cpp  code2sts.cpp  code3gs.cpp  code4cheby.cpp
doc/: #paper.lyx#  dg-sts.lyx  ode-stiff.lyx  osp.lyx  paper.lyx  paper.lyx~  reducePDf.sh
fully-adaptive/: CMakeLists.txt
fully-adaptive/include/: LegendrePoly.h
fully-adaptive/src/: m2n.cpp
fully-adaptive/unit_tests/: m2n.cpp
helper/: LU.cpp  base2.cpp  common.h  cvt_m2n.cu  iterate.cu  solve.cu  solver.cpp  solver.cu
include/: common.h  printf.h  rtc.h  zipper.cpp
integrator/: compute_coeff.cpp
misc_algo/: burger_adaptive.cpp  burger_ode.cpp  burger_old.cpp  diffusion_dg.cpp  diffusion_dg_abs.cpp  diffusion_euler.cpp  mg_solver.cpp  ode_adaptive.cpp  ode_adaptive_1step.cpp
optimizer/: osp.cpp  osp.py  osp_cmp.py
osp/: osp.cpp  osp.py  osp_cvx.py  osp_l.py
predictor/: common.h  weno.h
scipy/: precon.py  precon_slow.py  test.py
stiff/: dg.cpp  dg_iter.cpp  euler.cpp  zip.h  zip1.h  zip_gold.h  zip_iterator.h
tests/: brusselator_rkf45.cpp  diffusion_euler.cpp
uniform/: enableif.cpp  generate_modal2nodal_code.cpp  matvec.cpp  matvec.cu  seq.cpp
